Check for empty list